--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,12 +49,12 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite-TestNG_Example">
-                    <span>C:\Users\Mosarrof Hossain\workspace\TestNG1001\testng2.xml</span>
+                    <span>C:\Users\Mosarrof Hossain\workspace\TestNG1001\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="testlist-Suite-TestNG_Example">
-                    <span class="test-stats">1 test</span>
+                    <span class="test-stats">2 tests</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -112,17 +112,12 @@
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite-TestNG_Example" title="testExample.TestNG02" hash-for-method="TestNG02">TestNG02</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Suite-TestNG_Example" title="testExample.TestNG01" hash-for-method="testCase01">testCase01</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite-TestNG_Example" title="testExample.TestNG01" hash-for-method="testCase02">testCase02</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite-TestNG_Example" title="testExample.TestNG01" hash-for-method="testCase03">testCase03</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite-TestNG_Example -->
@@ -157,6 +152,13 @@
                   <span class="method-name">Test05</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="TestNG02">
+                  </a> <!-- TestNG02 -->
+                  <span class="method-name">TestNG02</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Suite-TestNG_Example-class-passed -->
           <div class="suite-Suite-TestNG_Example-class-passed">
@@ -172,26 +174,12 @@
                   <span class="method-name">testCase01</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testCase02">
-                  </a> <!-- testCase02 -->
-                  <span class="method-name">testCase02</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testCase03">
-                  </a> <!-- testCase03 -->
-                  <span class="method-name">testCase03</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Suite-TestNG_Example-class-passed -->
         </div> <!-- panel Suite-TestNG_Example -->
         <div panel-name="test-xml-Suite-TestNG_Example" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Mosarrof Hossain\workspace\TestNG1001\testng2.xml</span>
+            <span class="header-content">C:\Users\Mosarrof Hossain\workspace\TestNG1001\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -199,14 +187,23 @@
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Suite-TestNG Example&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;TestCase of TestNG&quot;&gt;
-    &lt;packages&gt;
-      &lt;package name=&quot;testExample&quot;/&gt;
-    &lt;/packages&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testExample.TestNG01&quot;/&gt;
-      &lt;class name=&quot;testExample.TestNG02&quot;/&gt;
+      &lt;class name=&quot;testExample.TestNG02&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;Test.*&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- testExample.TestNG02 --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- TestCase of TestNG --&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;TestNG Project02&quot;&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;testExample.TestNG01&quot;&gt;
+        &lt;methods&gt;
+          &lt;exclude name=&quot;testCase02&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- testExample.TestNG01 --&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- TestNG Project02 --&gt;
 &lt;/suite&gt; &lt;!-- Suite-TestNG Example --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -218,7 +215,10 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">TestCase of TestNG (2 classes)</span>
+                <span class="test-name">TestCase of TestNG (1 class)</span>
+              </li>
+              <li>
+                <span class="test-name">TestNG Project02 (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -244,32 +244,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testCase01')
-data.setCell(0, 2, 'testExample.TestNG01')
-data.setCell(0, 3, 8);
+data.setCell(0, 1, 'Test04')
+data.setCell(0, 2, 'testExample.TestNG02')
+data.setCell(0, 3, 9);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testCase02')
-data.setCell(1, 2, 'testExample.TestNG01')
-data.setCell(1, 3, 2);
+data.setCell(1, 1, 'Test05')
+data.setCell(1, 2, 'testExample.TestNG02')
+data.setCell(1, 3, 1);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testCase03')
+data.setCell(2, 1, 'testCase01')
 data.setCell(2, 2, 'testExample.TestNG01')
-data.setCell(2, 3, 2);
+data.setCell(2, 3, 1);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'Test04')
+data.setCell(3, 1, 'TestNG02')
 data.setCell(3, 2, 'testExample.TestNG02')
-data.setCell(3, 3, 1);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'Test05')
-data.setCell(4, 2, 'testExample.TestNG02')
-data.setCell(4, 3, 1);
+data.setCell(3, 3, 0);
 window.suiteTableData['Suite-TestNG_Example']= { tableData: data, tableDiv: 'times-div-Suite-TestNG_Example'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 ms</span>
+              <span class="suite-total-time">Total running time: 11 ms</span>
               <div id="times-div-Suite-TestNG_Example">
               </div> <!-- times-div-Suite-TestNG_Example -->
             </div> <!-- times-div -->
@@ -284,9 +280,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite-TestNG_Example" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">testExample.TestNG01</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">testCase02</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Suite-TestNG_Example" class="panel">
@@ -295,29 +298,29 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testExample.TestNG01</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">testCase01</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testCase02</span>
-                <span class="method-start">9 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">testCase03</span>
-                <span class="method-start">12 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
               <div class="chronological-class-name">testExample.TestNG02</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">Test04</span>
-                <span class="method-start">17 ms</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Test05</span>
-                <span class="method-start">20 ms</span>
+                <span class="method-start">12 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">TestNG02</span>
+                <span class="method-start">15 ms</span>
+              </div> <!-- test-method -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">testExample.TestNG01</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <span class="method-name">testCase03</span>
+                <span class="method-start">51 ms</span>
+              </div> <!-- configuration-test before -->
+              <div class="test-method">
+                <span class="method-name">testCase01</span>
+                <span class="method-start">52 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
