--- a/test-output/old/Suite-TestNG Example/classes.html
+++ b/test-output/old/Suite-TestNG Example/classes.html
@@ -18,10 +18,6 @@
 <td>testCase02</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>&nbsp;</td>
-<td>testCase03</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
@@ -39,6 +35,10 @@
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>TestNG02</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>Test04</td>
