--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,16 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Suite-TestNG Example</th></tr>
-<tr><td><a href="#t0">TestCase of TestNG</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">40</td><td></td><td></td></tr>
+<tr><td><a href="#t0">TestCase of TestNG</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">34</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">TestNG Project02</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">4</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">4</th><th class="num">0</th><th class="num">0</th><th class="num">38</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite-TestNG Example</th></tr></tbody><tbody id="t0"><tr><th colspan="4">TestCase of TestNG &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">testExample.TestNG01</td><td><a href="#m0">testCase01</a></td><td rowspan="1">1535407022996</td><td rowspan="1">8</td></tr><tr class="passedeven"><td><a href="#m1">testCase02</a></td><td rowspan="1">1535407023005</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">testCase03</a></td><td rowspan="1">1535407023008</td><td rowspan="1">2</td></tr><tr class="passedodd"><td rowspan="2">testExample.TestNG02</td><td><a href="#m3">Test04</a></td><td rowspan="1">1535407023013</td><td rowspan="1">1</td></tr><tr class="passedodd"><td><a href="#m4">Test05</a></td><td rowspan="1">1535407023016</td><td rowspan="1">1</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite-TestNG Example</th></tr></tbody><tbody id="t0"><tr><th colspan="4">TestCase of TestNG &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">testExample.TestNG02</td><td><a href="#m0">Test04</a></td><td rowspan="1">1536776239671</td><td rowspan="1">9</td></tr><tr class="passedeven"><td><a href="#m1">Test05</a></td><td rowspan="1">1536776239683</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m2">TestNG02</a></td><td rowspan="1">1536776239686</td><td rowspan="1">0</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">TestNG Project02 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testExample.TestNG01</td><td><a href="#m3">testCase01</a></td><td rowspan="1">1536776239723</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>TestCase of TestNG</h2><h3 id="m0">testExample.TestNG01#testCase01</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testExample.TestNG01#testCase02</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">testExample.TestNG01#testCase03</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">testExample.TestNG02#Test04</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">testExample.TestNG02#Test05</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>TestCase of TestNG</h2><h3 id="m0">testExample.TestNG02#Test04</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testExample.TestNG02#Test05</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testExample.TestNG02#TestNG02</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>TestNG Project02</h2><h3 id="m3">testExample.TestNG01#testCase01</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
